tweaked some design choices. Fixed some responsive design issues on mobile. Fixed PHP notice issue with form.

--- a/html_dev/scss/style.scss
+++ b/html_dev/scss/style.scss
@@ -56,11 +56,13 @@ html, body
 {
   margin: 0;
   padding: 0;
+	width: 100%;
   height: 100%;
 	background-color: #f9ede0;
 	font-family: 'Noto Sans', sans-serif;
 	font-size: 67.5%;
 	color: black;
+	overflow-x: hidden;
 }
 
 a
@@ -113,7 +115,7 @@ h1, h2, h3, h4, h5, h6
 .header-container
 {
   width: 100%;
-  height: 768px;
+  height: 512px;
 	overflow: hidden;
 	position: relative;
 }
@@ -122,7 +124,7 @@ h1, h2, h3, h4, h5, h6
 {
 	.header-container
 	{
-		height: 256px;
+		height: 192px;
 	}
 }
 
@@ -130,7 +132,15 @@ h1, h2, h3, h4, h5, h6
 {
 	.header-container
 	{
-		height: 512px;
+		height: 384px;
+	}
+}
+
+@include responsiveLayoutNexusSeven
+{
+	.header-container
+	{
+		height: 256px;
 	}
 }
 
@@ -158,11 +168,13 @@ h1, h2, h3, h4, h5, h6
   height: auto;
 	text-align: center;
 	margin-bottom: 2rem;
+	background-color: rgba(255, 150, 0, 0.21); //dit is de kleur voor de gehele nav bar (het menu)
 }
 
 .nav-container li
 {
 	display: inline-block;
+	border-radius: 5px; //dit geeft rounded corners aan de menu items. Hoe hoger het getal, hoe ronder
 	padding: 1rem;
 	margin-right: 1rem;
 	font-size: 2.5rem;
@@ -170,7 +182,7 @@ h1, h2, h3, h4, h5, h6
 
 .nav-container li:hover
 {
-	background-color: #D1C5B8;
+	background-color: #D1C5B8; //dit is de hover kleur voor menu items
 }
 
 .content-container
@@ -181,6 +193,8 @@ h1, h2, h3, h4, h5, h6
   flex: 1 1 0px;
 	font-size: 1.4rem;
 	line-height: 1.5;
+	text-align: center;
+	justify-content: center;
 }
 
 .content-container h4
@@ -195,6 +209,11 @@ h1, h2, h3, h4, h5, h6
 	.content-container h4
 	{
 		padding: 0;
+	}
+
+	.nav-container li
+	{
+		font-size: 2rem;
 	}
 }
 
@@ -253,6 +272,9 @@ h1, h2, h3, h4, h5, h6
 {
 	max-width: 100%;
 	margin: 1rem;
+	-webkit-box-shadow: 0px 0px 15px -1px rgba(148,135,114,1);
+	-moz-box-shadow: 0px 0px 15px -1px rgba(148,135,114,1);
+	box-shadow: 0px 0px 15px -1px rgba(148,135,114,1);
 }
 
 .sidebar-container
@@ -269,7 +291,6 @@ h1, h2, h3, h4, h5, h6
 {
   padding: 0;
   margin: 0;
-	margin-right: 1rem;
 }
 
 .sidebar-photo-container
@@ -308,8 +329,8 @@ h1, h2, h3, h4, h5, h6
 
 .contact-form-submit
 {
-  color: #fff;
-  background-color: #ff9664;
+  color: #fff; //text kleur
+  background-color: #ff9664; //kleur knop
 	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.5), inset 0 -2px 0 rgba(0,0,0,.25), inset 0 -3px 0 rgba(255,255,255,.2), 0 1px 0 rgba(0,0,0,.1);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.5), inset 0 -2px 0 rgba(0,0,0,.25), inset 0 -3px 0 rgba(255,255,255,.2), 0 1px 0 rgba(0,0,0,.1);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.5), inset 0 -2px 0 rgba(0,0,0,.25), inset 0 -3px 0 rgba(255,255,255,.2), 0 1px 0 rgba(0,0,0,.1);
@@ -317,7 +338,12 @@ h1, h2, h3, h4, h5, h6
 
 .contact-form-submit:hover
 {
-	background-color: #ffac87;
+	background-color: #ffac87; //kleur wanneer je hovert over knop
+}
+
+textarea
+{
+	resize: none;
 }
 
 .footer-container
